# test-mockall

./: Cargo.toml
src/: gen.rs  main.rs  mock.rs
