[package]
name = "test-mockall"
version = "0.1.0"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.36"
futures = "0.3.13"
tokio = { version = "1.4.0", features = [ "sync", "rt-multi-thread", "macros", "process" ] }

[dev-dependencies]
mockall = "0.9.1"
